--- a/portal-frontend/src/app/features/public/search/public-search.component.html
+++ b/portal-frontend/src/app/features/public/search/public-search.component.html
@@ -2,7 +2,7 @@
   <h1>Welcome to the ALC Public Search</h1>
   <app-warning-banner>
     This search returns only publicly available information from submissions created as of July 2015. To view older decisions, visit the
-    <a routerLink="https://www.alc.gov.bc.ca/application-decision-search/">Applications and Decisions</a> section of the ALC website. 
+    <a href="https://www.alc.gov.bc.ca/application-decision-search/">Applications and Decisions</a> section of the ALC website. 
     Applicants and local or First Nation governments should <a routerLink="/login">log in to the Portal</a> to view their detailed submissions.
   </app-warning-banner>
 
