--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/primary-contact/primary-contact.component.html
@@ -79,7 +79,7 @@
               <div class="value">{{ email.value }}</div>
             </div>
             <div class="row">
-              <button mat-stroked-button (click)="onEdit(selectedOwnerUuid)">Edit information</button>
+              <button mat-flat-button (click)="onEdit(selectedOwnerUuid)">Edit information</button>
             </div>
           </div>
         </div>
