--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/primary-contact/primary-contact-confirmation-dialog/primary-contact-confirmation-dialog.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/primary-contact/primary-contact-confirmation-dialog/primary-contact-confirmation-dialog.component.html
@@ -1,5 +1,12 @@
 <div mat-dialog-title>
-  <h4>Will one of the landowners or government contacts added previously be the primary contact?</h4>
+  <h4>
+    <ng-container *ngIf="isGovernmentUser">
+      Will {{ governmentName ?? 'Local / First Nation Government' }} staff be the primary contact?
+    </ng-container>
+    <ng-container *ngIf="!isGovernmentUser">
+      Will one of the landowners or government contacts added previously be the primary contact?
+    </ng-container>
+  </h4>
 </div>
 
 <div mat-dialog-content class="content">
