Only show authorization letter on toggle selection

--- a/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact.component.html
+++ b/portal-frontend/src/app/features/applications/edit-submission/primary-contact/primary-contact.component.html
@@ -169,7 +169,7 @@
       </div>
       <!-- /Third-Part Agent/Government -->
 
-      <div class="form-row" *ngIf="needsAuthorizationLetter || files.length > 0">
+      <div class="form-row" *ngIf="isExistingOwner.value !== null && (needsAuthorizationLetter || files.length > 0)">
         <div class="full-row">
           <label for="authorization-letter" class="subheading2">Authorization Letters</label>
           <p class="subtext">
