--- a/portal-frontend/src/app/features/applications/application-details/roso-details/roso-details.component.html
+++ b/portal-frontend/src/app/features/applications/application-details/roso-details/roso-details.component.html
@@ -21,7 +21,7 @@
     <app-no-data [showRequired]="showErrors" *ngIf="!_applicationSubmission.purpose"></app-no-data>
   </div>
 
-  <div class="subheading2 grid-1">Project Duration</div>
+  <div class="subheading2 grid-1">Removal of Soil Project Duration</div>
   <div class="grid-double">
     <div *ngIf="_applicationSubmission.soilProjectDuration">
       {{ _applicationSubmission.soilProjectDuration }}
